CPV modal and random z-index fixes

--- a/app/styles/_network.scss
+++ b/app/styles/_network.scss
@@ -73,3 +73,19 @@ div#sidebar-toggle {
     }
   }
 }
+
+
+/* ember-cli-materialize hacks */
+.ember-modal-overlay {
+  opacity: 1 !important;
+}
+
+.modal {
+  top: 80px !important;
+  &, & .modal-footer {
+    box-shadow: none;
+    color: #eee;
+    background-color: #1A1A1C;
+    width: 100%;
+  }
+}
